--- a/grammar.html
+++ b/grammar.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Study</title>
+    <title>Title</title>
 </head>
 <body>
     <div>
-        <img src="img/04.jpg" alt="">
+        <img src="grammar/04.jpg" alt="">
     </div>
 </body>
 </html>
