--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Study</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div>
+    <div class="main">
         <img src="img/04.jpg" alt="">
     </div>
 </body>
