--- a/grammar.html
+++ b/grammar.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>语法</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div>
