--- a/grammar.html
+++ b/grammar.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div>
+    <div class="main">
         <img src="grammar/04.jpg" alt="">
     </div>
 </body>
