--- a/grammar.html
+++ b/grammar.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="main">
+        <img src="grammar/01.jpg" alt="">
+        <img src="grammar/02.jpg" alt="">
+        <img src="grammar/03.jpg" alt="">
         <img src="grammar/04.jpg" alt="">
     </div>
 </body>
