--- a/grammar.html
+++ b/grammar.html
@@ -11,7 +11,7 @@
         <img src="grammar/02.jpg" alt="">
         <img src="grammar/03.jpg" alt="">
         <img src="grammar/04.jpg" alt="">
-        <img src="grammar/05.jpg" alt="">
+        <img src="grammar/04-2.jpg" alt="">
     </div>
 </body>
 </html>
