--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Study</title>
+    <title>单词</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
