--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="img/02.jpg" alt="">
         <img src="img/03.jpg" alt="">
         <img src="img/04.jpg" alt="">
+        <img src="img/05.jpg" alt="">
     </div>
 </body>
 </html>
