--- a/grammar.html
+++ b/grammar.html
@@ -14,6 +14,7 @@
         <img src="grammar/04-1.jpg" alt="">
         <img src="grammar/05.jpg" alt="">
         <img src="grammar/05-1.jpg" alt="">
+        <img src="grammar/06.jpg" alt="">
     </div>
 </body>
 </html>
