--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="img/03.jpg" alt="">
         <img src="img/04.jpg" alt="">
         <img src="img/05.jpg" alt="">
+        <img src="img/06.jpg" alt="">
     </div>
 </body>
 </html>
