--- a/grammar.html
+++ b/grammar.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <div class="main">
-        <img src="grammar/01.jpg" alt="">
-        <img src="grammar/02.jpg" alt="">
-        <img src="grammar/03.jpg" alt="">
-        <img src="grammar/04.jpg" alt="">
-        <img src="grammar/04-1.jpg" alt="">
-        <img src="grammar/05.jpg" alt="">
-        <img src="grammar/05-1.jpg" alt="">
-        <img src="grammar/06.jpg" alt="">
+        <img src="grammar/01.png" alt="">
+        <img src="grammar/02.png" alt="">
+        <img src="grammar/03.png" alt="">
+        <img src="grammar/04.png" alt="">
+        <img src="grammar/04-1.png" alt="">
+        <img src="grammar/05.png" alt="">
+        <img src="grammar/05-1.png" alt="">
+        <img src="grammar/06.png" alt="">
+        <img src="grammar/07.png" alt="">
+        <img src="grammar/08.png" alt="">
+        <img src="grammar/09.png" alt="">
     </div>
 </body>
 </html>
