--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <div class="main">
-        <img src="img/01.jpg" alt="">
-        <img src="img/02.jpg" alt="">
-        <img src="img/03.jpg" alt="">
-        <img src="img/04.jpg" alt="">
-        <img src="img/05.jpg" alt="">
-        <img src="img/06.jpg" alt="">
+        <img src="img/01.png" alt="">
+        <img src="img/02.png" alt="">
+        <img src="img/03.png" alt="">
+        <img src="img/04.png" alt="">
+        <img src="img/05.png" alt="">
+        <img src="img/06.png" alt="">
+        <img src="img/07.png" alt="">
+        <img src="img/08.png" alt="">
+        <img src="img/09.png" alt="">
     </div>
 </body>
 </html>
