--- a/file2.html
+++ b/file2.html
@@ -5,6 +5,6 @@
   <title>文件</title>
 </head>
 <body>
-  <embed src="./file/01.pdf" type="" width="100%" height="100%">
+  <iframe src="file/01.pdf"  width="100%" height="100%"></iframe>
 </body>
 </html>
