--- a/file.html
+++ b/file.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>文件</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <embed src="./file/01.pdf" type="" width="100%" height="100%">
