--- a/file2.html
+++ b/file2.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>文件</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <iframe src="file/01.pdf"  width="100%" height="100%"></iframe>
+  <iframe src="file/01.pdf" ></iframe>
 </body>
 </html>
