--- a/file.html
+++ b/file.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <embed src="./file/01.pdf" type="" width="100%" height="100%">
+  <embed src="file/01.pdf" type="">
+  <embed src="file/02.pdf" type="">
+  <embed src="file/03.pdf" type="">
+  <embed src="file/04.pdf" type="">
+  <embed src="file/05.pdf" type="">
+  <embed src="file/06.pdf" type="">
+  <embed src="file/07.pdf" type="">
+  <embed src="file/08.pdf" type="">
+  <embed src="file/09.pdf" type="">
 </body>
 </html>
