--- a/grammar.html
+++ b/grammar.html
@@ -18,6 +18,7 @@
         <img src="grammar/07.png" alt="">
         <img src="grammar/08.png" alt="">
         <img src="grammar/09.png" alt="">
+        <img src="grammar/10.png" alt="">
     </div>
 </body>
 </html>
