--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="img/07.png" alt="">
         <img src="img/08.png" alt="">
         <img src="img/09.png" alt="">
+        <img src="img/10.png" alt="">
     </div>
 </body>
 </html>
