--- a/grammar.html
+++ b/grammar.html
@@ -19,6 +19,8 @@
         <img src="grammar/08.png" alt="">
         <img src="grammar/09.png" alt="">
         <img src="grammar/10.png" alt="">
+        <img src="grammar/11.png" alt="">
+        <img src="grammar/12.png" alt="">
     </div>
 </body>
 </html>
