--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <img src="img/08.png" alt="">
         <img src="img/09.png" alt="">
         <img src="img/10.png" alt="">
+        <img src="img/11.png" alt="">
+        <img src="img/11-1.png" alt="">
+        <img src="img/12.png" alt="">
     </div>
 </body>
 </html>
