--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
 </head>
 <body>
     <div class="main">
+        <audio controls><source src="video/01.m4a" type="audio/mpeg"></audio>
         <img src="img/01.png" alt="">
+        <audio controls><source src="video/02.m4a" type="audio/mpeg"></audio>
         <img src="img/02.png" alt="">
+        <audio controls><source src="video/03.m4a" type="audio/mpeg"></audio>
         <img src="img/03.png" alt="">
+        <audio controls><source src="video/04.m4a" type="audio/mpeg"></audio>
         <img src="img/04.png" alt="">
+        <audio controls><source src="video/05.m4a" type="audio/mpeg"></audio>
         <img src="img/05.png" alt="">
+        <audio controls><source src="video/06.m4a" type="audio/mpeg"></audio>
         <img src="img/06.png" alt="">
+        <audio controls><source src="video/07.m4a" type="audio/mpeg"></audio>
         <img src="img/07.png" alt="">
+        <audio controls><source src="video/08.MP3" type="audio/mpeg"></audio>
         <img src="img/08.png" alt="">
+        <audio controls><source src="video/09.m4a" type="audio/mpeg"></audio>
         <img src="img/09.png" alt="">
+        <audio controls><source src="video/10.m4a" type="audio/mpeg"></audio>
         <img src="img/10.png" alt="">
+        <audio controls><source src="video/11.MP3" type="audio/mpeg"></audio>
         <img src="img/11.png" alt="">
         <img src="img/11-1.png" alt="">
+        <audio controls><source src="video/12.m4a" type="audio/mpeg"></audio>
         <img src="img/12.png" alt="">
     </div>
 </body>
