--- a/grammar.html
+++ b/grammar.html
@@ -23,6 +23,17 @@
         <img src="grammar/12.png" alt="">
         <img src="grammar/13.png" alt="">
         <img src="grammar/14.png" alt="">
+        <img src="grammar/15.png" alt="">
+        <img src="grammar/16.png" alt="">
+        <img src="grammar/17.png" alt="">
+        <img src="grammar/18.png" alt="">
+        <img src="grammar/19.png" alt="">
+        <img src="grammar/20.png" alt="">
+        <img src="grammar/20-1.png" alt="">
+        <img src="grammar/21.png" alt="">
+        <img src="grammar/22.png" alt="">
+        <img src="grammar/23.png" alt="">
+        <img src="grammar/24.png" alt="">
     </div>
 </body>
 </html>
