--- a/grammar.html
+++ b/grammar.html
@@ -34,6 +34,8 @@
         <img src="grammar/22.png" alt="">
         <img src="grammar/23.png" alt="">
         <img src="grammar/24.png" alt="">
+        <img src="grammar/25.png" alt="">
+        <img src="grammar/25-1.png" alt="">
     </div>
 </body>
 </html>
