--- a/grammar.html
+++ b/grammar.html
@@ -36,6 +36,7 @@
         <img src="grammar/24.png" alt="">
         <img src="grammar/25.png" alt="">
         <img src="grammar/25-1.png" alt="">
+        <img src="grammar/26.png" alt="">
     </div>
 </body>
 </html>
