--- a/grammar.html
+++ b/grammar.html
@@ -37,6 +37,16 @@
         <img src="grammar/25.png" alt="">
         <img src="grammar/25-1.png" alt="">
         <img src="grammar/26.png" alt="">
+        <img src="grammar/B01-1.png" alt="">
+        <img src="grammar/B01-2.png" alt="">
+        <img src="grammar/B02-1.png" alt="">
+        <img src="grammar/B02-2.png" alt="">
+        <img src="grammar/B02-3.png" alt="">
+        <img src="grammar/B03-1.png" alt="">
+        <img src="grammar/B03-2.png" alt="">
+        <img src="grammar/B04.png" alt="">
+        <img src="grammar/B05-1.png" alt="">
+        <img src="grammar/B05-2.jpg" alt="">
     </div>
 </body>
 </html>
