--- a/grammar.html
+++ b/grammar.html
@@ -46,7 +46,7 @@
         <img src="grammar/B03-2.png" alt="">
         <img src="grammar/B04.png" alt="">
         <img src="grammar/B05-1.png" alt="">
-        <img src="grammar/B05-2.jpg" alt="">
+        <img src="grammar/B05-2.png" alt="">
     </div>
 </body>
 </html>
