--- a/grammar.html
+++ b/grammar.html
@@ -7,50 +7,23 @@
 </head>
 <body>
     <div class="main">
-        <img src="grammar/01.png" alt="">
-        <img src="grammar/02.png" alt="">
-        <img src="grammar/03.png" alt="">
-        <img src="grammar/04.png" alt="">
-        <img src="grammar/04-1.png" alt="">
-        <img src="grammar/05.png" alt="">
-        <img src="grammar/05-1.png" alt="">
-        <img src="grammar/06.png" alt="">
-        <img src="grammar/07.png" alt="">
-        <img src="grammar/08.png" alt="">
-        <img src="grammar/09.png" alt="">
-        <img src="grammar/10.png" alt="">
-        <img src="grammar/11.png" alt="">
-        <img src="grammar/12.png" alt="">
-        <img src="grammar/13.png" alt="">
-        <img src="grammar/14.png" alt="">
-        <img src="grammar/15.png" alt="">
-        <img src="grammar/16.png" alt="">
-        <img src="grammar/17.png" alt="">
-        <img src="grammar/18.png" alt="">
-        <img src="grammar/19.png" alt="">
-        <img src="grammar/20.png" alt="">
-        <img src="grammar/20-1.png" alt="">
-        <img src="grammar/21.png" alt="">
-        <img src="grammar/22.png" alt="">
-        <img src="grammar/23.png" alt="">
-        <img src="grammar/24.png" alt="">
-        <img src="grammar/25.png" alt="">
-        <img src="grammar/25-1.png" alt="">
-        <img src="grammar/26.png" alt="">
-        <img src="grammar/B01-1.png" alt="">
-        <img src="grammar/B01-2.png" alt="">
-        <img src="grammar/B02-1.png" alt="">
-        <img src="grammar/B02-2.png" alt="">
-        <img src="grammar/B02-3.png" alt="">
-        <img src="grammar/B03-1.png" alt="">
-        <img src="grammar/B03-2.png" alt="">
-        <img src="grammar/B04.png" alt="">
-        <img src="grammar/B05-1.png" alt="">
-        <img src="grammar/B05-2.png" alt="">
-
-
-
         <img src="https://s21.ax1x.com/2025/08/31/pVcduJP.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdAqH.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdnit.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdeII.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdZdA.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjPED.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdMz8.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdKRf.png" alt="">
+        <img src="https://s21.ax1x.com/2025/08/31/pVcdlQS.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjiUe.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjmKP.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjnDf.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjub8.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjQUg.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcjl5Q.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/01/pVcj3Cj.png" alt="">
+        next15
     </div>
 </body>
 </html>
