--- a/grammar.html
+++ b/grammar.html
@@ -23,7 +23,15 @@
         <img src="https://s21.ax1x.com/2025/09/01/pVcjQUg.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/01/pVcjl5Q.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/01/pVcj3Cj.png" alt="">
-        next15
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6N6I.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6UXt.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6dnP.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6w0f.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6078.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6DAS.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6rtg.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/03/pVg6shQ.png" alt="">
+        next22
     </div>
 </body>
 </html>
