--- a/grammar.html
+++ b/grammar.html
@@ -46,8 +46,8 @@
         <img src="https://s21.ax1x.com/2025/09/08/pVRkn41.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/08/pVRkK9x.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/08/pVRkM36.png" alt="">
-        <img src="https://s21.ax1x.com/2025/09/08/pVRkQgK.jpg" alt="">
-        next　最后
+        <img src="https://s21.ax1x.com/2025/09/09/pVR8KPK.png" alt="">
+        next　B06
     </div>
 </body>
 </html>
