--- a/grammar.html
+++ b/grammar.html
@@ -61,6 +61,10 @@
         <img src="https://s21.ax1x.com/2025/09/11/pVWmSFe.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/11/pVWmpJH.png" alt="">
         <img src="https://s21.ax1x.com/2025/09/11/pVWm9Wd.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/13/pVWWj2T.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/13/pVWWvxU.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/13/pVWWzMF.png" alt="">
+        <img src="https://s21.ax1x.com/2025/09/13/pVWfSr4.png" alt="">
         next　
     </div>
 </body>
